fix save btn locale

--- a/src/Template/cup/catalog/order/invoice/index.twig
+++ b/src/Template/cup/catalog/order/invoice/index.twig
@@ -31,9 +31,7 @@
                     </div>
 
                     <div class="card-action">
-                        <button type="submit" class="btn btn-primary" style="height: 40px;">
-                            Save
-                        </button>
+                        <button type="submit" class="btn btn-primary" style="height: 40px;">{{ 'Save'|locale }}</button>
                     </div>
                 </div>
             </form>
