fix show section if count 0

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -153,7 +153,7 @@
             </a>
         </li>
 
-        {% if plugins.where('navigation', true) %}
+        {% if plugins.where('navigation', true).count() %}
             <li class="nav-section">
                 <span class="sidebar-mini-icon">
                     <i class="fa fa-ellipsis-h"></i>
